--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "todo",
-    "short_name": "todo",
+    "name": "Simplytasks",
+    "short_name": "Simplytasks",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
