--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: simplytasks
-description: Simple to do app written for TdoT 2021.
+description: Simple to-do app developed for Tdot 2021.
 
 publish_to: "none"
 
